# claude-controller

./: .gitignore  README.md  pyproject.toml
src/claude_controller/: __main__.py  ansi_to_slack.py  claude_session.py  config.py  log_tailer.py  main.py  poller.py  slack_mcp.py  tmux_session.py
