[project]
name = "claude-controller"
version = "0.1.0"
description = "Slack interface for Claude Code CLI"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_controller"]

[project.scripts]
claude-controller = "claude_controller.main:main"
